silly problem of close button not showing up discovered and corrected

--- a/css/gui.css
+++ b/css/gui.css
@@ -184,3 +184,41 @@ path.leaflet-clickable{
     font-size: 10pt;
     text-shadow:0px 0px 0.5px rgba(0,0,0,0.4);
 }
+
+.info {
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+
+.info h4 {
+    margin: 0 0 5px;
+    color: #777;
+}
+
+.legend {
+    line-height: 18px;
+    color: #555;
+}
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
+#map{
+    //height:80%;
+    /*width:80%;*/
+}
+#click{
+    top:250px;
+    left:50px;
+    z-index:1001;
+}
+#test{
+
+}
