--- a/css/label1.css
+++ b/css/label1.css
@@ -1,6 +1,4 @@
-.leaflet-popup-close-button {
-        display:none;
-    }
+
 
     .leaflet-label-overlay {
         line-height: 0px;
